<resources>
    <string name="app_name">FizzBuzz</string>
    <string name="entree_text">Enter three integers int1, int2 and limit, and two strings str1 and str2</string>
    <string name="hint_first_int">Int 1</string>
    <string name="hint_second_int">Int 2</string>
    <string name="hint_limit_edit">Limit</string>
    <string name="hint_first_string">Str 1</string>
    <string name="hint_second_string">Str 2</string>
    <string name="launch_result_text">Launch result</string>
    <string name="fill_fields_required">Please fill all the fields !!</string>
    <string name="very_big_limit">"Very big limit &#9785; I should remove the coloration. I\'m a phone not a server &#128549;"</string>
</resources>